# subjective_time_maps

./: .gitignore  MANIFEST.in  README.md  install.sh  requirements.txt  setup.py
ROS2_nodes/time_map_pkg/: CMakeLists.txt  package.xml
ROS2_nodes/time_map_pkg/config/: time_map_config.yaml
ROS2_nodes/time_map_pkg/include/time_map_pkg/: coordinator.hpp  particle_filter.hpp
ROS2_nodes/time_map_pkg/launch/: time_map.launch.xml
ROS2_nodes/time_map_pkg/results/: compare_stats.py
ROS2_nodes/time_map_pkg/results/resultados_target1/: experiment_stats_2.csv  experiment_stats_3.csv
ROS2_nodes/time_map_pkg/results/resultados_target2/: experiment_stats_2.csv  experiment_stats_3.csv
ROS2_nodes/time_map_pkg/results/resultados_target3/: experiment_stats_2.csv  experiment_stats_3.csv
ROS2_nodes/time_map_pkg/results/resultados_target4/: experiment_stats_2.csv  experiment_stats_3.csv
ROS2_nodes/time_map_pkg/src/: coordinator.cpp  particle_filter.cpp
ROS2_nodes/tyrell_tb3_time_map/: package.xml  setup.cfg  setup.py
ROS2_nodes/tyrell_tb3_time_map/tyrell_tb3_time_map/: tyrell_tb3_time_map_node.py
configs/: params_default_file.json  params_default_file_burgerBot.json  params_default_file_turtleBot.json
custom_maps/: ts1.yaml  ts1_robot.npy  ts1_target.npy  ts2.pgm  ts2.yaml  ts2_robot.npy  ts2_target.npy  ts3.pgm  ts3.yaml  ts3_robot.npy  ts3_target.npy
dependencies/rl_spin_decoupler/: .gitignore  README.md  __init__.py  skeleton_agent_side.py  skeleton_rl_side.py  spindecoupler.py
src/common/: coppelia_agents.py  coppelia_envs.py  rl_coppelia_manager.py  robot_generator.py  utils.py
src/coppelia_scripts/: agent_common.py  generate_obstacles.py  laser.lua  rl_script_copp.py  rl_script_pv_copp.py  robot_common.py  robot_script_copp.py  robot_script_pv_copp.py
src/gui/: common_ui.py  dialogs.py  main.py  services.py  workers.py
src/rl_coppelia/: auto_testing.py  auto_training.py  cli.py  create_robot.py  plot.py  run_session.py  sat_training.py  save.py  test.py  test_custom_exp.py  test_map.py  test_path.py  test_scene.py  tf_start.py  train.py
(+9 files in other folders)
