cmake_minimum_required(VERSION 3.8)
project(time_map_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

add_executable(particle_filter src/particle_filter.cpp)

target_include_directories(particle_filter PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

target_compile_features(particle_filter PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17

ament_target_dependencies(particle_filter rclcpp std_msgs geometry_msgs sensor_msgs)

add_executable(coordinator src/coordinator.cpp)

target_include_directories(coordinator PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

target_compile_features(coordinator PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17

ament_target_dependencies(coordinator rclcpp std_msgs geometry_msgs sensor_msgs)

install(TARGETS particle_filter coordinator
  DESTINATION lib/${PROJECT_NAME})

# Install directories files
install(DIRECTORY 
  launch
  config
  DESTINATION share/${PROJECT_NAME}
)



if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
